--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "mindfly-lms",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "vite",              // ✅ Start development server
+    "build": "vite build",      // ✅ Build for production
+    "preview": "vite preview"   // ✅ Preview production build
   },
   "dependencies": {
     "react": "^18.2.0",
